# qt-chess-client

./: CMakeLists.txt
src/: Board.cpp  Board.h  BoardScene.cpp  BoardScene.h  Events.cpp  Events.h  IMovesListener.h  PieceGraphicsItem.cpp  PieceGraphicsItem.h  SquareGraphicsItem.cpp  SquareGraphicsItem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lichess/: Client.cpp  Client.h  EventStream.cpp  EventStream.h
